Refactor Code to eliminate repetitions

--- a/index.html
+++ b/index.html
@@ -100,33 +100,35 @@
     <!-- Features -->
 
     <section id="features">
-      <div class="row">
-        <div class="feature-box col-lg-4">
-          <img
-            class="features-icons"
-            src="images/checked.png"
-            alt="checked image"
-          />
-          <h3 class="features-text">Easy to use.</h3>
-          <p>So easy to use, even your dog could do it.</p>
-        </div>
-        <div class="feature-box col-lg-4">
-          <img
-            class="features-icons"
-            src="images/bullseye.png"
-            alt="bullseye image"
-          />
-          <h3 class="features-text">Elite Clientele</h3>
-          <p>We have all the dogs, the greatest dogs.</p>
-        </div>
-        <div class="feature-box col-lg-4">
-          <img
-            class="features-icons"
-            src="images/heart.png"
-            alt="heart image"
-          />
-          <h3 class="features-text">Guaranteed to work.</h3>
-          <p>Find the love of your dog's life or your money back.</p>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="feature-box col-lg-4">
+            <img
+              class="features-icons"
+              src="images/checked.png"
+              alt="checked image"
+            />
+            <h3 class="features-text">Easy to use.</h3>
+            <p>So easy to use, even your dog could do it.</p>
+          </div>
+          <div class="feature-box col-lg-4">
+            <img
+              class="features-icons"
+              src="images/bullseye.png"
+              alt="bullseye image"
+            />
+            <h3 class="features-text">Elite Clientele</h3>
+            <p>We have all the dogs, the greatest dogs.</p>
+          </div>
+          <div class="feature-box col-lg-4">
+            <img
+              class="features-icons"
+              src="images/heart.png"
+              alt="heart image"
+            />
+            <h3 class="features-text">Guaranteed to work.</h3>
+            <p>Find the love of your dog's life or your money back.</p>
+          </div>
         </div>
       </div>
     </section>
@@ -136,7 +138,7 @@
     <section id="testimonials">
       <div id="testimonial-carousel" class="carousel slide" data-ride="false">
         <div class="carousel-inner">
-          <div class="carousel-item active">
+          <div class="carousel-item active container-fluid">
             <h2 class="testimonials-text">
               I no longer have to sniff other dogs for love. I've found the
               hottest Corgi on TinDog. Woof.
@@ -148,7 +150,7 @@
             />
             <em>Pebbles, New York</em>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item container-fluid">
             <h2 class="testimonials-text">
               My dog used to be so lonely, but with TinDog's help, they've found
               the love of their life. I think.
@@ -257,24 +259,28 @@
     <!-- Call to Action -->
 
     <section id="cta">
-      <h3 class="cta-text">Find the True Love of Your Dog's Life Today.</h3>
-      <button type="button" class="btn btn-dark btn-lg download-btn">
-        <i class="bi bi-apple"></i>Download
-      </button>
-      <button type="button" class="btn btn-outline-light btn-lg download-btn">
-        <i class="bi bi-google-play"></i>
-        Download
-      </button>
+      <div class="container-fluid">
+        <h3 class="cta-text">Find the True Love of Your Dog's Life Today.</h3>
+        <button type="button" class="btn btn-dark btn-lg download-btn">
+          <i class="bi bi-apple"></i>Download
+        </button>
+        <button type="button" class="btn btn-outline-light btn-lg download-btn">
+          <i class="bi bi-google-play"></i>
+          Download
+        </button>
+      </div>
     </section>
 
     <!-- Footer -->
 
     <footer id="footer">
-      <i class="bi bi-facebook"></i>
-      <i class="bi bi-twitter"></i>
-      <i class="bi bi-instagram"></i>
-      <i class="bi bi-envelope"></i>
-      <p>© Copyright TinDog</p>
+      <div class="container-fluid">
+        <i class="bi bi-facebook"></i>
+        <i class="bi bi-twitter"></i>
+        <i class="bi bi-instagram"></i>
+        <i class="bi bi-envelope"></i>
+        <p>© Copyright TinDog</p>
+      </div>
     </footer>
   </body>
 </html>
